fixé: bug d'affichage des 2 toolbar qui disparaissaient derrière le sidenav-content, le z-index devait être supérieur à 60 (celui du sidenav par défaut). Fixé: position du menu latéral gauche: z-index, margin-top:128px, position:fixed.

--- a/src/app/components/catalogue-jeux/catalogue-jeux.component.css
+++ b/src/app/components/catalogue-jeux/catalogue-jeux.component.css
@@ -2,8 +2,8 @@ h2 {
     text-align: center;
 }
 
-.container {
-    /* position: relative; */
+.containerX {
+    margin-top: 150px;
 }
 
 .item {
