--- a/src/app/components/left-side/personnal-gamelist/personnal-gamelist.component.css
+++ b/src/app/components/left-side/personnal-gamelist/personnal-gamelist.component.css
@@ -9,7 +9,7 @@
 .image-et-titre {
  
     display:inline-block;    
-    z-index: 10;
+    z-index: 1;
     border: 1px solid blue;
 }
 
