--- a/src/app/top/toolbar-menu/toolbar-menu.component.css
+++ b/src/app/top/toolbar-menu/toolbar-menu.component.css
@@ -1,6 +1,11 @@
 .tb-menu{
     position: fixed;
     width: 100%;
-    flex: 1 1 auto;
-    z-index: 10;
 }
+
+mat-toolbar{
+    position: fixed;
+    z-index: 61;
+    margin-top: 64px;
+    
+} 
